--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+}
+.header{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  position: sticky;
+  top: 0;
+  background-color: black;
+  max-width: 100%;
+  height: 70px;
+  align-items: center;
+}
+.Logo{
+  height: 3em;
+  width: 3em;
+  margin-left: 3em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Home {
+  color: antiquewhite;
+  margin-left: 3em;
+}
+.Albums{
+  color: antiquewhite;
+  margin-left: 3em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.showAlbum{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.addAlbums{
+  margin: auto;
+  width: 700px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.showAlbums{
+  margin: auto;
+  width: 700px;
 }
